# Newton

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  newton
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  clang-format.yml
assets/shaders/: basic.pixelShader.glsl  basic.pixelShader.hlsl  basic.shader  basic.shader.hlsl  basic.vertexShader.glsl  basic.vertexShader.hlsl  ellipse.pixelShader.glsl  line.pixelShader.glsl  mandelbrot.pixelShader.glsl  phong.pixelShader.glsl  phong.pixelShader.hlsl  phong.vertexShader.hlsl  quad.pixelShader.glsl  quad.vertexShader.glsl
dependancies/include/imgui/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_impl_glut.cpp
examples/: CMakeLists.txt  Renderer2DExample.cpp  SuzanneExample.cpp  main.cpp
examples/examples2D/: CMakeLists.txt  marching_squares.cpp  renderer_2D_example.cpp
examples/examples3D/: CMakeLists.txt  marching_cubes.cpp  suzanne_example.cpp
src/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Intersections.h  Mesh.cpp  Mesh.h  Newton.h  NewtonRenderer.h  OBJLoader.h  Object.cpp  Object.h  PhysicsWorld.cpp  PhysicsWorld.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shapes.cpp  Shapes.h  Texture.cpp  Texture.h  TimeIntegrator.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Vivid.h  main.cpp  mesh.h
src/Editor/: Application.cpp  Application.h  EntryPoint.h  RenderingInterface.h  Window.cpp  Window.h
src/UI/: MenuBar.cpp  MenuBar.h  UI.cpp  UI.h  UIHeaders.h
src/assets/shaders/: phong.pixelShader.hlsl  quad.pixelShader.hlsl
src/common/: Types.h  types.h
src/confs/: Config.h  DynamicExportingMacros.h
src/inputs/: InputHandler.cpp  InputHandler.h
src/renderer/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Shapes.cpp  Shapes.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
src/renderer/shapes/: Quad3d.cpp  Quad3d.h  Shape.h  Sphere.cpp  Sphere.h
src/ui/: UI.cpp  UI.h
src/utils/: CMakeLists.txt  Error.cpp  Error.h  Timer.cpp  Timer.h  error.cpp  error.h  timer.cpp  timer.h
utils/: error.h  timer.cpp  timer.h
